FIxed view on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -307,7 +307,7 @@ h1, h2, h3 {
 
 @media (max-width: 480px) {
     .project-card {
-        min-height: auto;
+        min-height: 300px;
     }
 
     .project-card-front h3 {
